# openGL_project

./: CMakeLists.txt  README.md
01-hello_rectangle/src/: glad.c  utilities.cpp
02-placeholder/: CMakeLists.txt
02-placeholder/assets/: fragment_core.glsl  vertex_core.glsl
02-placeholder/include/utilities/: shaders.h  utilities.hpp
02-placeholder/src/: main.cpp  shaders.cpp  utilities.cpp
Notes/: 7_video.md
assets/: fragment_core.glsl  vertex_core.glsl
hello_rectangle/: CMakeLists.txt  LICENSE  readme.md
hello_rectangle/include/utilities/: utilities.hpp
hello_rectangle/src/: main.cpp
include/glad/: glad.h
src/: main.cpp
